# context-exchange

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PRODUCT.md  README.md  ROADMAP.md  SECURITY.md  STATE_OF_THE_PRODUCT.md  USE_CASES.md  agent-setup.md  pyproject.toml  railway.toml
personas/: 01-jake-college-student.md  02-maria-startup-founder.md  03-dev-team-engineers.md  04-grandma-linda.md  05-alex-security-engineer.md  06-raj-oss-developer.md  07-sophie-tom-couple.md  08-corporate-it.md  09-marcus-freelancer.md  10-adversary.md
src/app/: auth.py  config.py  database.py  docs_page.py  email.py  html.py  main.py  models.py  schemas.py
src/app/client/: listener.py
src/app/routers/: admin.py  auth.py  client.py  connections.py  discover.py  messages.py  observe.py  onboard.py  permissions.py
tests/: conftest.py  test_announcements.py  test_auth.py  test_client.py  test_connections.py  test_discover.py  test_landing.py  test_messages.py  test_multi_agent.py  test_observe.py  test_onboard.py  test_permissions.py  test_ssrf.py  test_stream.py  test_webhooks.py
